--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "trycourier/courier": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
