--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,12 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+AUTH0_ISSUER=
+AUTH0_IDENTIFIER=
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+
+COURIER_DOMAIN
+COURIER_TOKEN
